[package]
name = "lib"
version = "0.1.0"
authors = ["Aftab Alam <532906+one-aalam@users.noreply.github.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
dirs = "3.0.2"

[dev-dependencies]
fake = "2"
